--- a/Yeezy Series/index.html
+++ b/Yeezy Series/index.html
@@ -22,7 +22,7 @@
 <body class="is-preload-0 is-preload-1 is-preload-2">
 
     <!-- Main -->
-    <div style="background-color: aquamarine" id="main">
+    <div style="background-color: whitesmoke" id="main">
 
         <!-- Header -->
         <header id="header">
