Few index Updates

--- a/shop-now.html
+++ b/shop-now.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assetss/ico/favicon.png">
 
-    <title>Shop Now</title>
+    <title>TTM •• Shop Now</title>
 
     <link href="assetss/css/hover_pack.css" rel="stylesheet">
 
