--- a/Balenciaga Series/index.html
+++ b/Balenciaga Series/index.html
@@ -41,51 +41,51 @@
         <section id="thumbnails">
             <article>
                 <a class="thumbnail" href="https://i.pinimg.com/originals/bb/b3/21/bbb3217afd4c07d91268ee266a877944.jpg" data-position="left center"><img src="https://i.pinimg.com/originals/bb/b3/21/bbb3217afd4c07d91268ee266a877944.jpg" height="100px" width="100px" /></a>
-                <h2 style="font-family: 'Nosifer'">Yeezy 700 "Arzareth"</h2>
+                <h2 style="font-family: 'Nosifer'"> InsertNameHere</h2>
             </article>
             <article>
                 <a class="thumbnail" href="https://image-cdn.hypb.st/https%3A%2F%2Fhypebeast.com%2Fimage%2F2019%2F08%2Fbalenciaga-triple-s-pearl-grey-release-11.jpg?q=75&w=800&cbr=1&fit=max"><img src="https://image-cdn.hypb.st/https%3A%2F%2Fhypebeast.com%2Fimage%2F2019%2F08%2Fbalenciaga-triple-s-pearl-grey-release-11.jpg?q=75&w=800&cbr=1&fit=max" alt="" height="100px" /></a>
-                <h2>Yeezy Boost 700 Wave Runner Mauve</h2>
+                <h2 style="font-family: 'Nosifer'"> InsertNameHere</h2>
             </article>
             <article>
                 <a class="thumbnail" href="https://image-cdn.hypb.st/https%3A%2F%2Fhypebeast.com%2Fwp-content%2Fblogs.dir%2F6%2Ffiles%2F2020%2F04%2Fbalenciaga-triple-s-sneaker-white-logo-minimal-monochrome-1.jpg" data-position="left center"><img src="https://image-cdn.hypb.st/https%3A%2F%2Fhypebeast.com%2Fwp-content%2Fblogs.dir%2F6%2Ffiles%2F2020%2F04%2Fbalenciaga-triple-s-sneaker-white-logo-minimal-monochrome-1.jpg" alt="" height="100px" /></a>
-                <h2>Yeezy Boost 700 VX</h2>
+                <h2 style="font-family: 'Nosifer'"> InsertNameHere</h2>
             </article>
             <article>
                 <a class="thumbnail" href="https://image-cdn.hypb.st/https%3A%2F%2Fhypebeast.com%2Fwp-content%2Fblogs.dir%2F6%2Ffiles%2F2020%2F02%2Fbalenciaga-triple-s-chunky-sneakers-beige-release-1.jpg?quality=95&w=1170&cbr=1&q=90&fit=max" data-position="right center"><img src="https://image-cdn.hypb.st/https%3A%2F%2Fhypebeast.com%2Fwp-content%2Fblogs.dir%2F6%2Ffiles%2F2020%2F02%2Fbalenciaga-triple-s-chunky-sneakers-beige-release-1.jpg?quality=95&w=1170&cbr=1&q=90&fit=max" alt="" height="100px" /></a>
-                <h2>Adidas Yeezy Boost 700 Wave Runner</h2>
+                <h2 style="font-family: 'Nosifer'"> InsertNameHere</h2>
             </article>
             <article>
                 <a class="thumbnail" href="https://image-cdn.hypb.st/https%3A%2F%2Fhypebeast.com%2Fimage%2F2020%2F08%2Fbalenciaga-triple-s-gray-yelllow-BALNSCYHGEECE46000-release-info-chunky-sneaker-1.jpeg?q=75&w=800&cbr=1&fit=max" data-position="left center"><img src="https://image-cdn.hypb.st/https%3A%2F%2Fhypebeast.com%2Fimage%2F2020%2F08%2Fbalenciaga-triple-s-gray-yelllow-BALNSCYHGEECE46000-release-info-chunky-sneaker-1.jpeg?q=75&w=800&cbr=1&fit=max" alt="" height="100px" /></a>
-                <h2>Adidas Yeezy-700-Sun GZ6984</h2>
+                <h2 style="font-family: 'Nosifer'"> InsertNameHere</h2>
             </article>
             <article>
                 <a class="thumbnail" href="https://image-cdn.hypb.st/https%3A%2F%2Fhypebeast.com%2Fimage%2F2020%2F07%2Fbalenciaga-triple-s-red-black-neon-green-logo-print-release-info-1.jpg?q=90&w=1400&cbr=1&fit=maxg" data-position="right center"><img src="https://image-cdn.hypb.st/https%3A%2F%2Fhypebeast.com%2Fimage%2F2020%2F07%2Fbalenciaga-triple-s-red-black-neon-green-logo-print-release-info-1.jpg?q=90&w=1400&cbr=1&fit=max" alt="" height="100px" /></a>
-                <h2>Yeezy 450 Cloud-White h68038</h2>
+                <h2 style="font-family: 'Nosifer'"> InsertNameHere</h2>
             </article>
             <article>
                 <a class="thumbnail" href="https://image-cdn.hypb.st/https%3A%2F%2Fhypebeast.com%2Fimage%2F2020%2F07%2Fbalenciaga-triple-s-red-black-neon-green-logo-print-release-info-5.jpg?q=90&w=1400&cbr=1&fit=max"><img src="https://image-cdn.hypb.st/https%3A%2F%2Fhypebeast.com%2Fimage%2F2020%2F07%2Fbalenciaga-triple-s-red-black-neon-green-logo-print-release-info-5.jpg?q=90&w=1400&cbr=1&fit=max" alt="" height="100px" /></a>
-                <h2>Adidas Yeezy-700 V3 Clay-Brown</h2>
+                <h2 style="font-family: 'Nosifer'"> InsertNameHere</h2>
             </article>
             <article>
                 <a class="thumbnail" href="https://image-cdn.hypb.st/https%3A%2F%2Fhypebeast.com%2Fwp-content%2Fblogs.dir%2F6%2Ffiles%2F2020%2F12%2Fbalenciaga-triple-s-sneakers-allover-logo-black-pink-colorway-price-where-to-buy-1.jpg?q=90&w=1400&cbr=1&fit=max"><img src="https://image-cdn.hypb.st/https%3A%2F%2Fhypebeast.com%2Fwp-content%2Fblogs.dir%2F6%2Ffiles%2F2020%2F12%2Fbalenciaga-triple-s-sneakers-allover-logo-black-pink-colorway-price-where-to-buy-1.jpg?q=90&w=1400&cbr=1&fit=max" alt="" height="100px" /></a>
-                <h2>Adidas Yeezy-Boost 700 Bright-Blue</h2>
+                <h2 style="font-family: 'Nosifer'"> InsertNameHere</h2>
             </article>
             <article>
                 <a class="thumbnail" href="https://image-cdn.hypb.st/https%3A%2F%2Fhypebeast.com%2Fwp-content%2Fblogs.dir%2F6%2Ffiles%2F2020%2F12%2Fbalenciaga-triple-s-designer-sneakers-black-colorway-price-where-to-buy-1.jpg?q=90&w=1400&cbr=1&fit=max"><img src="https://image-cdn.hypb.st/https%3A%2F%2Fhypebeast.com%2Fwp-content%2Fblogs.dir%2F6%2Ffiles%2F2020%2F12%2Fbalenciaga-triple-s-designer-sneakers-black-colorway-price-where-to-buy-1.jpg?q=90&w=1400&cbr=1&fit=max" alt="" height="100px" /></a>
-                <h2>Adidas YEEZY Boost 700 MNVN Orange</h2>
+                <h2 style="font-family: 'Nosifer'"> InsertNameHere</h2>
             </article>
             <article>
                 <a class="thumbnail" href="https://image-cdn.hypb.st/https%3A%2F%2Fhypebeast.com%2Fwp-content%2Fblogs.dir%2F6%2Ffiles%2F2020%2F10%2Fbalenciaga-triple-s-pink-sneakers-1.jpg?q=90&w=1400&cbr=1&fit=max"><img src="https://image-cdn.hypb.st/https%3A%2F%2Fhypebeast.com%2Fwp-content%2Fblogs.dir%2F6%2Ffiles%2F2020%2F10%2Fbalenciaga-triple-s-pink-sneakers-1.jpg?q=90&w=1400&cbr=1&fit=max" alt="" height="100px" /></a>
-                <h2>Adidas Yeezy 700-V3 Srphym</h2>
+                <h2 style="font-family: 'Nosifer'"> InsertNameHere</h2>
             </article>
             <article>
                 <a class="thumbnail" href="https://image-cdn.hypb.st/https%3A%2F%2Fhypebeast.com%2Fwp-content%2Fblogs.dir%2F6%2Ffiles%2F2021%2F03%2Fbalenciaga-track-mule-black-white-beige-demna-gvasalia-wfh-indoor-shoe-trend-release-info-1.jpg?q=90&w=1400&cbr=1&fit=max"><img src="https://image-cdn.hypb.st/https%3A%2F%2Fhypebeast.com%2Fwp-content%2Fblogs.dir%2F6%2Ffiles%2F2021%2F03%2Fbalenciaga-track-mule-black-white-beige-demna-gvasalia-wfh-indoor-shoe-trend-release-info-1.jpg?q=90&w=1400&cbr=1&fit=max" alt="" height="100px" /></a>
-                <h2>Adidas Yeezy Boost 700 Inertia</h2>
+                <h2 style="font-family: 'Nosifer'"> InsertNameHere</h2>
             </article>
             <article>
                 <a class="thumbnail" href="https://stockx-360.imgix.net//Balenciaga-Track-Grey/Images/Balenciaga-Track-Grey/Lv2/img01.jpg"><img src="https://stockx-360.imgix.net//Balenciaga-Track-Grey/Images/Balenciaga-Track-Grey/Lv2/img01.jpg" alt="" height="100px" /></a>
-                <h2>Adidas Yeezy Boost 700 Inertia</h2>
+                <h2 style="font-family: 'Nosifer'"> InsertNameHere</h2>
             </article>
         </section>
 
